Fix crash caused by adding page break item

Background:
A crash will happen when a page break item is added between two items
with the same position.

Changes:
Fix the position of items before adding page break item.

AppListItemListTest.AddPageBreakItem
AppListItemListTest.AddPageBreakItemWithSamePosition

Bug: 874619
Test: 
Change-Id: I7e5c9eac51db0fa7a563cb0097c13ab1777218fa
Reviewed-on: https://chromium-review.googlesource.com/1176560
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583466}
Former-commit-id: f21d67fe489fb239ae13b0148eb0a2f5d98801a2